--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,11 +1,15 @@
 [tool.poetry]
 name = "npiai-proto"
-version = "0.0.1"
+version = "v0.0.1.dev0"
 description = "The NPI.AI Proto"
 license = "Apache-2.0"
 authors = ["Wells Wang <wells@npi.ai>"]
 readme = "README.md"
-repository="https://github.com/npi-ai/proto"
+homepage = "https://github.com/npi-ai/proto/python"
+repository = "https://github.com/npi-ai/proto/python"
+packages = [
+    { include = "npiai_proto/*" },
+]
 
 [tool.poetry.dependencies]
 python = "^3.10"
